--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "todo-list",
   "version": "0.0.0",
+  "homepage": ".",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d dist/browser",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:todo-list": "node dist/todo-list/server/server.mjs"
@@ -32,6 +35,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "gh-pages": "^6.3.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
